# nc-hash

./: .gitignore  Makefile  README.md  client.cpp  libClient.cpp  libClient.h  libNCPH.cpp  libNCPH.h  libclient.h  libserver.cpp  libserver.h  ncph.h  server.cpp
Production/src/: module-info.java
Production/src/com/nchash/: Main.java
Production/src/com/nchash/controller/: Controller.java  GuiUtil.java  MainController.java  mydialog.css
Production/src/com/nchash/jni/: ClientWrapper.cpp  Makefile  client.cpp  com_nchash_view_CppHook.h  libClient.cpp  libClient.h  libNCPH.cpp  libServer.cpp  libServer.h  libTCP.cpp  libTest.cpp  server.cpp
Production/src/com/nchash/model/: Particle.java
Production/src/com/nchash/view/: CppHook.java  MainView.fxml  Sample.fxml  bootstrapfx.css
Production/src/sample/: Controller.java  Main.java  sample.fxml
SeniorProjectDemo/src/: module-info.java
SeniorProjectDemo/src/sample/: DemoController.java  Main.java
UI-New-Draft/src/: module-info.java
UI-New-Draft/src/com/nchash/view/: CenterView.fxml  CenterViewController.java  Controller.java  Main.java  RootLayout.fxml  VcenterView.fxml
demo/: .gitignore  Makefile.in  README.md  configure.ac
demo/src/: .gitignore  HamDist.py  Makefile.in  PreProc.py  capture.py  checksum.sh  client.cpp  client.h  client.hpp  demo  demo.cpp  preprocess.py  scheme2WithBytestringImportExport.cpp  scheme2WithZKP.cpp
documentation/: 2019-02-02 Lynda C Notes.md  2019-02-05 GUI Frameworks.md  2019-02-16 JavaFX Demo Documentation.md  2019-02-19 JNI Notes.md  2019-02-28 Meeting Notes.md  2019-03-19 Design Goals.md  2019-03-19 Git and Github.md  2019-04-02 Java and IntelliJ Project Structure.md  JavaFX Demo Documentation.md
src/: Makefile  ciphertext.txt  client  client.cpp  client.hpp  ipc1.txt  ipc2.txt  ipc3.txt  module-info.java  ncph.cpp  ncph.h  ncph.hpp  ncphclient.cpp  ncphcombined.cpp  ncphserver.cpp  pubkey.txt  server  server.cpp  tcp.c  tcp.cpp  tcp.h  tcpClient.c  tcpServer.c  tcpUtils.c
ui_draft/src/: module-info.java
ui_draft/src/sample/: Controller.java  Main.java  sample.fxml
